# gazelle-multi-gomod-poc

./: MODULE.bazel  README.md
dep/: BUILD.bazel  go.mod  version.go
inner-module/: BUILD.bazel  MODULE.bazel  go.mod
main/: BUILD.bazel  go.mod
main1/: BUILD.bazel  go.mod  main.go
main2/: BUILD.bazel  go.mod
main3/: BUILD.bazel  go.mod
median1/: go.mod  go.sum  median.go
median2/: go.mod  go.sum  median.go
work2/main2/: BUILD.bazel  go.mod
work4/dep/: version.go
work4/main4/: BUILD.bazel  go.mod
