module(
    name = "gazelle-multi-gomod-poc",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.45.0")
archive_override(
    module_name = "gazelle",
    urls = [
        "https://github.com/xuxife/bazel-gazelle/releases/download/v0.45.0-poc-3/bazel-gazelle-v0.45.0-poc-3.tar.gz",
    ],
)

bazel_dep(name = "rules_go", version = "0.49.0", repo_name = "io_bazel_rules_go")
archive_override(
    module_name = "rules_go",
    integrity = "sha256-2T7wLx5yyC2Ls9UWlRmzYWezPPaMJSUl47nT1d0UPec=",
    urls = [
        "https://artifprodeastus.z13.web.core.windows.net/bazel/rules/go/rules_go-v0.49.0.zip",
        "https://github.com/bazel-contrib/rules_go/releases/download/v0.49.0/rules_go-v0.49.0.zip",
    ],
)

# golang
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(
    sdks = {
        "linux_amd64": ("go1.24.7-1.linux-amd64.tar.gz", "a283380559f8cfc7860bd4528ad7346904552cde9d0fb0255fac34e64f61a4cb"),
        "linux_arm64": ("go1.24.7-1.linux-arm64.tar.gz", "27c5659c76f2e9fdc2ad3ea031442d969f45ec60d2156351256e6c281cb10bd8"),
        "darwin_amd64": ("go1.24.7-1.darwin-amd64.tar.gz", "d7db16275adff3ecaea4db8d7677f8e67e8cea8d2091d7907dacec00d5de3360"),
        "darwin_arm64": ("go1.24.7-1.darwin-arm64.tar.gz", "73a2cf0e6df56dc56e406fb936adb8e7ca9a2fb00102ea52a60c1905930a8e38"),
    },
    urls = [
        "https://aka.ms/golang/release/latest/{}",
    ],
    version = "1.24.7",  # -imagetool-autobump-golang
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//main:go.mod")

# the go code of the protos are all generated manually
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
)

use_repo(
    go_deps,
    "com_github_xuxife_gazelle_multi_gomod_poc_dep_v0.0.1",
    "com_github_xuxife_gazelle_multi_gomod_poc_dep_v0.0.2",
)