load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main1_lib",
    srcs = ["main.go"],
    importpath = "github.com/xuxife/gazelle-multi-gomod-poc/main1",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_xuxife_gazelle_multi_gomod_poc_dep_v0_0_1//:dep"
    ],
)

go_binary(
    name = "main1",
    embed = [":main1_lib"],
    visibility = ["//visibility:public"],
)
