load("@gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/xuxife/gazelle-multi-gomod-poc/main2",
    versioned = ":go.mod",
)

go_library(
    name = "main2_lib",
    srcs = ["main.go"],
    importpath = "github.com/xuxife/gazelle-multi-gomod-poc/main2",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_xuxife_gazelle_multi_gomod_poc_dep_v0_0_2//:dep"
    ],
)

go_binary(
    name = "main2",
    embed = [":main2_lib"],
    visibility = ["//visibility:public"],
)
