load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main3_lib",
    srcs = ["main.go"],
    importpath = "github.com/xuxife/gazelle-multi-gomod-poc/main3",
    visibility = ["//visibility:private"],
    deps = [
        "//dep:dep_lib",
    ],
)

go_binary(
    name = "main3",
    embed = [":main3_lib"],
    visibility = ["//visibility:public"],
)
