load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/xuxife/gazelle-multi-gomod-poc/main3",
    versioned = ":go.mod",
)

go_library(
    name = "main3_lib",
    srcs = ["main.go"],
    importpath = "github.com/xuxife/gazelle-multi-gomod-poc/main3",
    visibility = ["//visibility:private"],
    deps = [
        "//dep:dep_lib",
    ],
)

go_binary(
    name = "main3",
    embed = [":main3_lib"],
    visibility = ["//visibility:public"],
)
