load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main4_lib",
    srcs = ["main.go"],
    importpath = "github.com/xuxife/gazelle-multi-gomod-poc/work4/main4",
    visibility = ["//visibility:private"],
    deps = [
        "//work4/dep:dep_lib",
    ],
)

go_binary(
    name = "main4",
    embed = [":main4_lib"],
    visibility = ["//visibility:public"],
)
